# openfhe-numpy

./: .readthedocs.yaml  CMakeLists.txt  CMakeLists_for_developer.txt  README.md  __init__.py  dev_mode.sh
.github/actions/generic_workflow_builder/: action.yml
.github/workflows/: generic_workflow.yml  manual.yml
cases/adv_ops/: test_adv_matvec.py
cases/matrix_ops/: test_matrix_mean.py  test_matrix_sum.py  test_matrix_sumcum.py  test_simple_matrix_operation.py
cases/vector_ops/: test_simple_vector_operation.py
config/: config.h.in
docs/: SPHINX_SETUP.md  conf.py  index.rst  installation.rst  requirements.txt
docs/_build/doctrees/: index.doctree
docs/_build/doctrees/api/: modules.doctree
docs/_build/html/: SPHINX_SETUP.html  genindex.html  index_new.html  installation.html  objects.inv  searchindex.js
docs/_build/html/.doctrees/: SPHINX_SETUP.doctree  environment.pickle  index.doctree  index_new.doctree  installation.doctree
docs/_build/html/.doctrees/api/: direct_modules.doctree  modules.doctree
docs/_build/html/_modules/openfhe_numpy/utils/: errors.html  matlib.html
docs/_build/html/_sources/: SPHINX_SETUP.md.txt  index_new.rst.txt  installation.rst.txt
docs/_build/html/api/: direct_modules.html  modules.html
docs/api/: direct_modules.rst
docs/doctrees/: SPHINX_SETUP.doctree  api.doctree  constructor.doctree  enum.doctree  environment.pickle  example.doctree  index.doctree  installation.doctree  matrix_arithmetic.doctree  tensor.doctree
docs/doctrees/api/: direct_modules.doctree
docs/html/: .buildinfo  SPHINX_SETUP.html  api.html  constructor.html  enum.html  example.html  genindex.html  index.html  installation.html  matrix_arithmetic.html  objects.inv  py-modindex.html  search.html  searchindex.js  tensor.html
docs/html/_modules/: index.html
docs/html/_modules/openfhe_numpy/operations/: matrix_api.html
docs/html/_modules/openfhe_numpy/tensor/: constructors.html  ctarray.html  ptarray.html  tensor.html
docs/html/_modules/openfhe_numpy/utils/: constants.html  packing.html  typecheck.html
docs/html/_sources/api/: modules.rst.txt
docs/html/_static/: documentation_options.js
docs/scripts/: build-docs-locally.sh  build-wheel-for-docs.sh
examples/: demo_matrix_accumulation.py  demo_matrix_addition.py  demo_matrix_sum.py  demo_matrix_transpose.py  demo_matvec_product.py  demo_square_matrix_product.py  simple_matrix_accumulation.py  simple_matrix_addition.py  simple_matrix_sum.py  simple_matrix_transpose.py  simple_matvec_product.py  simple_square_matrix_product.py  simple_vector_operations.py  test.py
examples/python/: simple.py  simple_broadcasting.py  simple_matrix_accumulation.py  simple_matrix_sum.py  simple_matrix_vector_product.py  simple_mlp_inference.py  simple_mlp_inference_unencrypted_weights.py  simple_slicing.py  simple_square_matrix_product.py  simple_vector_operations.py
onp/: __init__.py
onp/operations/: matrix_api.py  matrix_arithmetic.py
onp/tensor/: block_tensor.py
onp/utils/: utils.py
openfhe_numpy/: __init__.py
openfhe_numpy/cpp/examples/: demo-matrix-multiplication.cpp  demo-single-matrix-operation.cpp
openfhe_numpy/cpp/include/: array_metadata.h  constants.h  enc_matrix.h  helper_functions.h  numpy_array_metadata.h  numpy_enc_matrix.h  numpy_helper_functions.h  numpy_utils.h
openfhe_numpy/cpp/lib/: array_metadata.cpp  bindings.cpp  enc_matrix.cpp  helper_functions.cpp  numpy_array_metadata.cpp  numpy_bindings.cpp  numpy_enc_matrix.cpp  numpy_helper_functions.cpp  numpy_utils.cpp  utils.cpp
openfhe_numpy/operations/: __init__.py  broadcast.py  crypto_context.py  crypto_helper.py  dispatch.py  matrix_api.py  matrix_arithmetic.py
openfhe_numpy/tensor/: __init__.py  block_ctarray.py  block_tensor.py  constructors.py  ctarray.py  ptarray.py  tensor.py
openfhe_numpy/utils/: __init__.py  _helper_slots_ops.py  constants.py  debugger.py  errors.py  format.py  matlib.py  packing.py  typecheck.py  utils.py
src/: __init__.py
src/cpp/examples/: demo-single-matrix-operation.cpp
src/operations/: __init__.py  crypto_helper.py  matrix_arithmetic.py
src/tensor/: __init__.py  block_tensor.py  constructors.py  ctarray.py  tensor.py
src/utils/: matlib.py  utils.py
tests/: README.md  main_unittest.py  run_tests.py  test_adv_matvec.py  test_adv_square_matmul.py  test_matrix_addition.py  test_matrix_mean.py  test_matrix_sum.py  test_matrix_sumcum.py  test_matrix_sumcum_cols.py  test_matrix_sumcum_rows.py  test_matrix_transpose.py  test_simple_matrix_operation.py  test_simple_vector_operation.py  test_vector_addition.py  test_vector_inner_prod.py
tests/cases/adv_ops/: test_adv_matvec.py
tests/cases/broadcasting/: test_broadcasting.py  test_broadcasting_scalar.py  test_broadcasting_vector.py
tests/cases/matrix_ops/: test_matrix_mean.py  test_matrix_sum.py  test_matrix_sumcum.py  test_simple_matrix_operation.py
tests/cases/slicing/: test_slicing_matrix.py  test_slicing_vector.py
tests/cases/vector_ops/: test_simple_vector_operation.py
tests/core/: __init__.py  case.py  config.py  crypto_context.py  result.py  runner.py  test_crypto_context.py  test_framework.py  test_utils.py  utils.py
tests/python_tests/: README.md  __main__.py  test_adv_matvec.py  test_matrix_mean.py  test_matrix_sum.py  test_matrix_sumcum.py  test_simple_matrix_operation.py  test_simple_vector_operation.py
tests/python_tests/core/: __init__.py  case.py  config.py  crypto_context.py  result.py  runner.py  test_framework.py
